test/compile-fail/fixtures/recursive-b.as
import a from "./recursive-a";

let mutable counter;

export def method() {
  counter = 5;
}

a.method();
